helpful help text

--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
       </div>
     </div>
 
+    <p>Refresh the page for another illuminating example.</p>
+
     <script src="ui_vs_ux.js"></script>
   </body>
 </html>
