--- a/index.html
+++ b/index.html
@@ -1,21 +1,6 @@
 <html>
   <head>
-    <style>
-      .container {
-        display: flex;
-        width: 650px;
-        border: 1px solid black;
-        justify-content: space-around;
-        flex-direction: row;
-      }
-
-      .gif {
-      }
-
-      .slot img {
-        width: 300px;
-      }
-    </style>
+    <link rel="stylesheet" href="style.css">
   </head>
 
   <body>
@@ -31,7 +16,8 @@
       </div>
     </div>
 
-    <p>Refresh the page for another illuminating example.</p>
+    <p><a id="new-example" href="/">Get a new example.</a></p>
+    <p>Share this example: <input type="text" id="shareable-url"/></p>
 
     <script src="ui_vs_ux.js"></script>
   </body>
