credit where credit is due

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
     <p><a id="new-example" href="/">Get a new example.</a></p>
     <p>Share this example: <input type="text" id="shareable-url"/></p>
+    <p>Inspired by <a href="https://twitter.com/sdw/status/709853249407361024?lang=en">this brilliant tweet</a>.
 
     <script src="ui_vs_ux.js"></script>
   </body>
