--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
 
     <p><a id="new-example" href="/">Get a new example.</a></p>
     <p>Share this example: <input type="text" id="shareable-url"/></p>
-    <p>Inspired by <a href="https://twitter.com/sdw/status/709853249407361024?lang=en">this brilliant tweet</a>.
+
+    <div class="info">
+      <p>Inspired by <a href="https://twitter.com/sdw/status/709853249407361024?lang=en">this brilliant tweet</a>.</p>
+      <p>Code at <a href="https://github.com/BaseCase/ui_vs_ux">GitHub</a>.</p>
+    </div>
 
     <script src="ui_vs_ux.js"></script>
   </body>
